<resources>
    <string name="app_name">GoodNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lets_get_started">Lets get started.</string>
    <string name="hey_there">Hey there!</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="good_to_see_you_again">Good to see you Again !</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">1328011420980961</string>
    <string name="fb_login_protocol_scheme">fb1328011420980961</string>
    <string name="add_icon">Add icon</string>
    <string name="add_task">Add your Task</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="sample_text">Have to Drink water on a dailly basis</string>
    <string name="vertical_dots">vertical dots</string>
    <string name="calender">calender</string>
    <string name="plus">plus</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="priority_bell">Priority bell</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="med">Med</string>
    <string name="edit_delete">Edit_delet</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="delete_confirmation">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sureToMarkAsComplete">Are you sure you want to remove this task?</string>
    <string name="done">Done</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats You have completed this task!!</string>
    <string name="note_content">Note Content</string>
    <string name="type_what_u_want">Type what u want...</string>
    <string name="upload">Upload</string>
    <string name="star">star</string>
</resources>