<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddNewTaskFragment"
    android:background="@drawable/bottomsheet_dialog_background"
    android:backgroundTint="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:elevation="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF9F9">

            <EditText
                android:id="@+id/title_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.725"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75">

            </EditText>

            <ImageView
                android:id="@+id/title_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/title"
                android:src="@drawable/ic_baseline_title_24"
                app:layout_constraintBottom_toBottomOf="@+id/title_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_editText" />

            <EditText
                android:id="@+id/description_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/title_editText"
                app:layout_constraintStart_toStartOf="@+id/title_editText"
                app:layout_constraintTop_toBottomOf="@+id/title_editText"
                app:layout_constraintWidth_percent="0.75" />

            <ImageView
                android:id="@+id/description_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_baseline_description_24"
                app:layout_constraintBottom_toBottomOf="@+id/description_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/description_editText" />

            <EditText
                android:id="@+id/date_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/dd_mm_yy"
                android:clickable="true"
                android:importantForAutofill="no"
                android:padding="8dp"
                android:inputType="date"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/description_editText"
                app:layout_constraintTop_toBottomOf="@+id/description_editText"
                app:layout_constraintWidth_percent="0.55"
                android:focusable="true" />

            <ImageView
                android:id="@+id/date_imageView"
                android:layout_width="21dp"
                android:layout_height="25dp"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/calender"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="@+id/date_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/date_editText"
                app:layout_constraintVertical_bias="0.68" />

            <EditText
                android:id="@+id/time_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/date_editText"
                app:layout_constraintStart_toStartOf="@+id/date_editText"
                app:layout_constraintTop_toBottomOf="@+id/date_editText"
                app:layout_constraintWidth_percent="0.55">

            </EditText>

            <ImageView
                android:id="@+id/time_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/time"
                android:src="@drawable/ic_baseline_access_time_24"
                app:layout_constraintBottom_toBottomOf="@+id/time_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time_editText"
                app:layout_constraintVertical_bias="0.538" />

            <RadioGroup
                android:id="@+id/priority_radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/priority_back"
                android:backgroundTint="#FFAFAF"
                app:layout_constraintEnd_toEndOf="@+id/description_editText"
                app:layout_constraintStart_toStartOf="@+id/time_imageView"
                app:layout_constraintTop_toBottomOf="@+id/time_editText"
                app:layout_constraintWidth_percent="0.8">

                <RadioButton
                    android:id="@+id/high_radio"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high">

                </RadioButton>

                <RadioButton
                    android:id="@+id/med_radio"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium">

                </RadioButton>

                <RadioButton
                    android:id="@+id/low_radio"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low">

                </RadioButton>

            </RadioGroup>

            <ImageView
                android:id="@+id/priority_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/priority_bell"
                android:src="@drawable/ic_baseline_notification_important_24"
                app:layout_constraintBottom_toBottomOf="@+id/priority_radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/priority_radioGroup"
                app:layout_constraintVertical_bias="0.583" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/button_bg"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priority_radioGroup"
                app:layout_constraintWidth_percent="0.8" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>