<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEECE9">

    <EditText
        android:id="@+id/note_title_editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/note_content_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/note_content_editText"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/type_what_u_want"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/upload_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FFC900"
        android:clickable="true"
        android:contentDescription="@string/upload"
        android:elevation="40dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/note_content_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/note_content_editText"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />
</androidx.constraintlayout.widget.ConstraintLayout>